--- a/css/style.css
+++ b/css/style.css
@@ -325,6 +325,10 @@ span .titulos-index, .titulo-elementos, .texto-elementos{
 .da-tracks a{
     color: black;
 }
+.da-tracks-titulo{
+    color: black;
+    text-decoration: underline;
+}
 
 
 /* GENRES */
