--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ header{
 }
 nav{
     width: 100%;
-    height: 10%;
+    height: 10px;
     font-weight: bold;
 }
 nav ul{
@@ -57,13 +57,9 @@ nav ul{
     flex-direction: row;
     justify-content: space-around;
 }
-nav ul li{
-    text-align: center;
-}
 form{
     width: 100%;
     text-align: center;
-    color: rgb(214, 191, 191);
 }
 form input{
     width: 240px;
@@ -203,7 +199,7 @@ span .titulos-index, .titulo-elementos, .texto-elementos{
     margin-right: 15px;
 }
 
-/*detail-tracks */
+/*Detail-tracks */
 .container-track{
     display: flex;
     width: 100%;
