--- a/css/style.css
+++ b/css/style.css
@@ -226,9 +226,6 @@ span .titulos-index, .titulo-elementos, .texto-elementos{
     color: black;
     font-weight: lighter;
 }
-.botonplaylist:hover{
-    background-color: #246eb9ff;
-}
 .reproductor-track{
     display: flex;
     flex-wrap: wrap;
@@ -238,7 +235,7 @@ span .titulos-index, .titulo-elementos, .texto-elementos{
     align-items: center;
 }
 .reproductor-track iframe{
-    border-radius: 20px;
+    border-radius: 5px;
     margin-right: 15px;
 }
 
@@ -398,6 +395,7 @@ ul.detail-genres li{
     border-radius: 10px;
     padding: 50px;
     margin-right: 30px;
+    padding-bottom: 30px;
 }
 tr{
     text-align: left;
@@ -419,6 +417,16 @@ th{
 }
 .play a i:hover{
     color: black;
+}
+.clean{
+    display: flex;
+    justify-content: flex-end;
+    width: 2000%;
+    margin-top: 40px;
+}
+.boton-clean{
+    text-align: end;
+    width: 10%;
 }
 
 /*Resultados Búsqueda*/
