--- a/css/style.css
+++ b/css/style.css
@@ -291,21 +291,25 @@ span .titulos-index, .titulo-elementos, .texto-elementos{
     flex-direction: row;
     margin: 20px;
     background-color: rgba(255, 0, 221, 0.842);
+    
 }
 .da-img{
     width: 400px;
     height: 400px;
     border-radius: 95%;
     margin: 20px;
+    margin-top: 55.5px;
 }
 .da-nombre{
-    font-size: 40px;
-    margin-top: 70px;
+    font-size: 50px;
+    margin-top: 30px;
+    margin-bottom: 0px;
 }
 .da-div-texto{
     display: flex;
     flex-direction: column;
-    margin-left: 35px;
+    margin-left: 20px;
+    width: 100%;
 }
 .da-tracks a{
     color: black;
@@ -313,6 +317,8 @@ span .titulos-index, .titulo-elementos, .texto-elementos{
 .da-tracks-titulo{
     color: black;
     text-decoration: underline;
+    font-size: 25px;
+    margin-top: 0px;
 }
 
 
