--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,7 @@ span .titulos-index, .titulo-elementos, .texto-elementos{
 }
 .album-data{
     text-align: start;
+    margin-left: 40px;
 }
 .album-data h3, h3 a{
     font-weight: lighter;
