--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body{
     font-weight: lighter;
 }
 
-/* cabecera */
+/* Cabecera */
 header{
     display: flex;
     flex-wrap: wrap;
@@ -224,7 +224,9 @@ span .titulos-index, .titulo-elementos, .texto-elementos{
     margin-left: 15px;
     margin-right: 15px;
 }
-
+.backgroundindex section a:hover{
+    background-color: rgba(25, 0, 114, 0.81);
+}
 /*Detail-tracks */
 .body-track{
     display: flex;
@@ -258,6 +260,9 @@ span .titulos-index, .titulo-elementos, .texto-elementos{
 .track-data h4{
     font-size: 20px;
 }
+.album-track:hover, .artista-track:hover{
+    text-decoration: underline;
+}
 .reproductor-track{
     display: flex;
     flex-wrap: wrap;
@@ -269,6 +274,13 @@ span .titulos-index, .titulo-elementos, .texto-elementos{
 .reproductor-track iframe{
     border-radius: 5px;
     margin-right: 15px;
+}
+.agregarplaylist{
+    background-color: #F8F1F1;
+    border-radius: 5px;
+}
+.agregarplaylist:hover{
+    background-color: #246eb9ff;
 }
 
 /* detail-album */
@@ -440,17 +452,14 @@ ul.detailGenres li{
 /*PlayList*/
 .container-table{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
 }
-
 .table{
     background-color: rgba(255, 0, 221, 0.842);
     border-radius: 10px;
     padding: 50px;
-    margin-right: 30px;
-    padding-bottom: 30px;
-}
+    margin-left: 75px;}
 tr, tr td, tr td a{
     text-align: left;
     color: black;
@@ -497,6 +506,15 @@ th{
 }
 td a:hover{
     text-decoration: underline
+}
+#borrar{
+    width: 6%;
+    margin-left: 88%;
+    background-color: #F8F1F1;
+    border-radius: 5px;
+}
+#borrar:hover{
+    background-color: #246eb9ff;
 }
 
 /*Resultados Búsqueda*/
