--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ span .titulos-index, .titulo-elementos, .texto-elementos{
 }
 .section-album{
     background-color: rgba(255, 0, 221, 0.842);
-    width: 76%;
+    width: 60%;
     border-radius: 5px;
     display: flex;
     flex-direction: row;
@@ -317,8 +317,8 @@ span .titulos-index, .titulo-elementos, .texto-elementos{
     border-radius: 25px;
 }
 .album-data{
-    text-align: start;
-    margin-left: 40px;
+    text-align: center;
+    width: 35%;
 }
 .album-data h3, h3 a{
     font-weight: lighter;
@@ -327,7 +327,7 @@ span .titulos-index, .titulo-elementos, .texto-elementos{
 .album-songs{
     text-align: center;
     font-weight: bold;
-    margin-left: 170px;
+    width: 65%;
 }
 .album-songs ul li a{
     color:black;
